--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </title>
     <meta charset="UTF-8" />
     <meta name="format-detection" content="telephone=no" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="icon" href="/img/favicon.svg" type=" image/svg+xml" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" href="./img/favicon.svg" type=" image/svg+xml" />
     <!-- <meta name="robots" content="noindex, nofollow"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
@@ -32,13 +32,13 @@
       property="og:description"
       content="Bhaktivedanta Book Trust is the sole owner of the copyright for all books written by Śrīla Prabhupāda (according to the Trust agreement). Since the Trust is irrevocable, therefore, as long as the TRUST exists (there are legally appointed Trustees), international laws on the transfer of copyright after 40 years, to the relatives of the author or to the public, do not apply. An irrevocable Trust has the power of a posthumous will that cannot be revoked! According to the Trust agreement, in the event of the termination of this Trust the copyright is transferred only to the sole beneficiary the original ISKCON corporation registered in 1966 in New York."
     />
-    <meta property="og:image" content="/img/meta/preview-home.jpg" />
-    <meta property="og:image:secure_url" content="/img/meta/preview-home.jpg" />
+    <meta property="og:image" content="./img/meta/preview-home.jpg" />
+    <meta property="og:image:secure_url" content="./img/meta/preview-home.jpg" />
     <meta property="og:image:width" content="968" />
     <meta property="og:image:height" content="504" />
 
-    <script defer src="/js/counter3.js"></script>
-    <script defer type="module" src="/js/app.js"></script>
+    <script defer src="./js/counter3.js"></script>
+    <script defer type="module" src="./js/app.js"></script>
   </head>
 
   <body>
@@ -49,7 +49,7 @@
             <div class="header__logo logo">
               <img
                 class="logo__icon"
-                src="/img/top-logo.svg"
+                src="./img/top-logo.svg"
                 alt="Bhaktivedanta book trust logotype"
               />
               <span class="logo__description">BHAKTIVEDANTA BOOK TRUST</span>
@@ -119,7 +119,7 @@
             <div class="header__laguage">
               <img
                 class="header__language-icon"
-                src="/img/globus.svg"
+                src="./img/globus.svg"
                 alt=""
                 aria-hidden="true"
               />
@@ -134,7 +134,7 @@
       <main class="page">
         <section
           class="page__main-block main-block"
-          style="background-image: url('/img/main-block/background.jpg')"
+          style="background-image: url('./img/main-block/background.jpg')"
         >
           <div class="main-block__container">
             <div class="main-block__inner">
@@ -154,10 +154,10 @@
               <div class="main-block__image">
                 <picture
                   ><source
-                    srcset="/img/main-block/image.webp"
+                    srcset="./img/main-block/image.webp"
                     type="image/webp" />
                   <img
-                    src="/img/main-block/image.jpg"
+                    src="./img/main-block/image.jpg"
                     alt="Bhaktivedanta Swami Prabhupāda"
                 /></picture>
               </div>
@@ -199,9 +199,9 @@
               </div>
               <div class="info__image">
                 <picture
-                  ><source srcset="/img/info/image.webp" type="image/webp" />
+                  ><source srcset="./img/info/image.webp" type="image/webp" />
                   <img
-                    src="/img/info/image.jpg"
+                    src="./img/info/image.jpg"
                     alt="The Bhaktivedanta Book Trust is the sole copyright owner of all books written by Srila Prabhupāda"
                 /></picture>
               </div>
@@ -248,7 +248,7 @@
             <div class="footer__logo">
               <a href="index.html">
                 <img
-                  src="/img/bottom-logo.svg"
+                  src="./img/bottom-logo.svg"
                   alt="Bhaktivedanta Swami Prabhupāda"
                 />
               </a>
