--- a/trust.html
+++ b/trust.html
@@ -8,8 +8,8 @@
     <meta charset="UTF-8" />
     <meta name="format-detection" content="telephone=no" />
     <!-- <style>body{opacity: 0;}</style> -->
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="icon" href="/img/favicon.svg" type=" image/svg+xml" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" href="./img/favicon.svg" type=" image/svg+xml" />
     <!--link rel="shortcut icon" href="favicon.ico"-->
     <!-- <meta name="robots" content="noindex, nofollow"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -32,12 +32,12 @@
       property="og:description"
       content="The sole founder of the Trust is Bhaktivedanta Swami Prabhupāda. As the sole founder, at the same time he was the senior Trustee of the Trust he created."
     />
-    <meta property="og:image" content="/img/meta/preview-trust.jpg" />
+    <meta property="og:image" content="./img/meta/preview-trust.jpg" />
     <meta property="og:image:width" content="968" />
     <meta property="og:image:height" content="504" />
 
-    <script defer src="/js/counter3.js"></script>
-    <script defer type="module" src="/js/app.js"></script>
+    <script defer src="./js/counter3.js"></script>
+    <script defer type="module" src="./js/app.js"></script>
   </head>
 
   <body>
@@ -48,7 +48,7 @@
             <div class="header__logo logo">
               <img
                 class="logo__icon"
-                src="/img/top-logo.svg"
+                src="./img/top-logo.svg"
                 alt="Bhaktivedanta book trust logotype"
               />
               <span class="logo__description">BHAKTIVEDANTA BOOK TRUST</span>
@@ -118,7 +118,7 @@
             <div class="header__laguage">
               <img
                 class="header__language-icon"
-                src="/img/globus.svg"
+                src="./img/globus.svg"
                 alt=""
                 aria-hidden="true"
               />
@@ -162,8 +162,8 @@
               </div>
               <div class="trust__image">
                 <picture
-                  ><source srcset="/img/trust/image.webp" type="image/webp" />
-                  <img src="/img/trust/image.jpg" alt="Founder Of the TRUST"
+                  ><source srcset="./img/trust/image.webp" type="image/webp" />
+                  <img src="./img/trust/image.jpg" alt="Founder Of the TRUST"
                 /></picture>
               </div>
             </div>
@@ -177,9 +177,9 @@
             <div class="trustees__body _grid">
               <div class="trustees__image">
                 <picture
-                  ><source srcset="/img/trust/image-2.webp" type="image/webp" />
+                  ><source srcset="./img/trust/image-2.webp" type="image/webp" />
                   <img
-                    src="/img/trust/image-2.jpg"
+                    src="./img/trust/image-2.jpg"
                     alt="Procedure for appointing a trustee"
                 /></picture>
               </div>
@@ -316,7 +316,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Trust_agreement/96dpi_webp/4.webp"
+                          data-srcset="./img/documents/Trust_agreement/96dpi_webp/4.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -333,7 +333,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Trust_agreement/96dpi_webp/5.webp"
+                          data-srcset="./img/documents/Trust_agreement/96dpi_webp/5.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -350,7 +350,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Trust_agreement/96dpi_webp/6.webp"
+                          data-srcset="./img/documents/Trust_agreement/96dpi_webp/6.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -363,14 +363,14 @@
                   <div class="trustees__arrows">
                     <button class="trustees__arrow-left">
                       <img
-                        src="/img/arrow-left.svg"
+                        src="./img/arrow-left.svg"
                         alt="Move slide to left"
                         onclick="GoToPage(lastpath + '>move_left#Trust_agreement'); return true;"
                       />
                     </button>
                     <button class="trustees__arrow-right">
                       <img
-                        src="/img/arrow-right.svg"
+                        src="./img/arrow-right.svg"
                         alt="Move slide to right"
                         onclick="GoToPage(lastpath + '>move_right#Trust_agreement'); return true;"
                       />
@@ -392,7 +392,7 @@
                   class="beneficiary__arrow-left"
                   onclick="GoToPage(lastpath + '>move_left#Cetrificate_of_Incorporation_ISKCON'); return true;"
                 >
-                  <img src="/img/arrow-left.svg" alt="Move slide to left" />
+                  <img src="./img/arrow-left.svg" alt="Move slide to left" />
                 </button>
                 <div class="beneficiary__slider swiper">
                   <div class="beneficiary__wrapper swiper-wrapper" data-gallery>
@@ -404,7 +404,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/1.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/1.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -421,7 +421,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/2.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/2.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -438,7 +438,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/3.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/3.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -455,7 +455,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/4.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/4.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -472,7 +472,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/5.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/5.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -489,7 +489,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/6.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/6.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -506,7 +506,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/7.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/7.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -523,7 +523,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/8.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/8.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -540,7 +540,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/9.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/9.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -557,7 +557,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/10.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/10.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -574,7 +574,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/11.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/11.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -591,7 +591,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/12.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/12.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -608,7 +608,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/13.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/13.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -625,7 +625,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/14.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/14.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -643,7 +643,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/15.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/15.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -660,7 +660,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/16.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/16.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -677,7 +677,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/17.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/17.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -694,7 +694,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/18.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/18.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -711,7 +711,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/19.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/19.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -728,7 +728,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/20.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/20.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -745,7 +745,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/21.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/21.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -762,7 +762,7 @@
                       <picture
                         ><source
                           srcset="data:image/webp;base64"
-                          data-srcset="/img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/22.webp"
+                          data-srcset="./img/documents/Cetrificate_of_Incorporation_ISKCON/96dpi_webp/22.webp"
                           type="image/webp" />
                         <img
                           src="data:image/jpeg;base64"
@@ -777,7 +777,7 @@
                   class="beneficiary__arrow-right"
                   onclick="GoToPage(lastpath + '>move_right#Cetrificate_of_Incorporation_ISKCON'); return true;"
                 >
-                  <img src="/img/arrow-right.svg" alt="Move slide to right" />
+                  <img src="./img/arrow-right.svg" alt="Move slide to right" />
                 </button>
               </div>
               <div class="beneficiary__content">
@@ -789,9 +789,9 @@
                 <div class="beneficiary__image-box">
                   <picture
                     ><source
-                      srcset="/img/beneficiary/icon.webp"
+                      srcset="./img/beneficiary/icon.webp"
                       type="image/webp" />
-                    <img src="/img/beneficiary/icon.png" alt="ISKCON"
+                    <img src="./img/beneficiary/icon.png" alt="ISKCON"
                   /></picture>
                 </div>
               </div>
@@ -805,7 +805,7 @@
             <div class="footer__logo">
               <a href="index.html">
                 <img
-                  src="/img/bottom-logo.svg"
+                  src="./img/bottom-logo.svg"
                   alt="Bhaktivedanta Swami Prabhupāda"
                 />
               </a>
