--- a/announcement.html
+++ b/announcement.html
@@ -4,9 +4,9 @@
     <title>Bhaktivedanta Book Trust (Announcement and Advertisement)</title>
     <meta charset="UTF-8" />
     <meta name="format-detection" content="telephone=no" />
-    <link rel="stylesheet" href="/css/style.css?_v=20220730153125" />
+    <link rel="stylesheet" href="./css/style.css?_v=20220730153125" />
     <!--link rel="shortcut icon" href="favicon.ico"-->
-    <link rel="icon" href="/img/favicon.svg" type=" image/svg+xml" />
+    <link rel="icon" href="./img/favicon.svg" type=" image/svg+xml" />
     <!-- <meta name="robots" content="noindex, nofollow"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
@@ -28,12 +28,12 @@
       property="og:description"
       content="Bhaktivedanta Book Trust (Announcement and Advertisement)"
     />
-    <meta property="og:image" content="/img/meta/preview-announcement.jpg" />
+    <meta property="og:image" content="./img/meta/preview-announcement.jpg" />
     <meta property="og:image:width" content="968" />
     <meta property="og:image:height" content="504" />
 
-    <script defer src="/js/counter3.js"></script>
-    <script defer type="module" src="/js/app.js"></script>
+    <script defer src="./js/counter3.js"></script>
+    <script defer type="module" src="./js/app.js"></script>
   </head>
 
   <body>
@@ -44,7 +44,7 @@
             <div class="header__logo logo">
               <img
                 class="logo__icon"
-                src="/img/top-logo.svg"
+                src="./img/top-logo.svg"
                 alt="Bhaktivedanta book trust logotype"
               />
               <span class="logo__description">BHAKTIVEDANTA BOOK TRUST</span>
@@ -114,7 +114,7 @@
             <div class="header__laguage">
               <img
                 class="header__language-icon"
-                src="/img/globus.svg"
+                src="./img/globus.svg"
                 alt=""
                 aria-hidden="true"
               />
@@ -134,7 +134,7 @@
             </h1>
             <div
               class="annoncment__form"
-              style="background-image: url('/img/announcement/background.jpg')"
+              style="background-image: url('./img/announcement/background.jpg')"
             >
               <div class="ask" id="body">
                 <form class="ask" action="#" id="myform">
@@ -214,7 +214,7 @@
                 data-popup="#popup-annoncment-1"
                 class="annoncment__item item-annoncment"
                 style="
-                  background-image: url('/img/announcement/background.jpg');
+                  background-image: url('./img/announcement/background.jpg');
                 "
               >
                 <h3
@@ -228,7 +228,7 @@
                 data-popup="#popup-annoncment-2"
                 class="annoncment__item item-annoncment"
                 style="
-                  background-image: url('/img/announcement/background.jpg');
+                  background-image: url('./img/announcement/background.jpg');
                 "
               >
                 <h3
@@ -248,7 +248,7 @@
             <div class="footer__logo">
               <a href="index.html">
                 <img
-                  src="/img/bottom-logo.svg"
+                  src="./img/bottom-logo.svg"
                   alt="Bhaktivedanta Swami Prabhupāda"
                 />
               </a>
@@ -321,7 +321,7 @@
         <div class="popup__container">
           <div class="popup__content">
             <button data-close type="button" class="popup__close">
-              <img src="/img/close-button.svg" alt="Close the modal window" />
+              <img src="./img/close-button.svg" alt="Close the modal window" />
             </button>
             <div class="popup__text">
               <h2 class="popup__title" data-language="annoncmentPopup_1">
@@ -330,10 +330,10 @@
               <div class="popup__image">
                 <picture
                   ><source
-                    srcset="/img/announcement/background.webp"
+                    srcset="./img/announcement/background.webp"
                     type="image/webp" />
                   <img
-                    src="/img/announcement/background.jpg"
+                    src="./img/announcement/background.jpg"
                     alt="Требуется юрист по междунарожным уголовным преступлениям"
                 /></picture>
               </div>
@@ -353,7 +353,7 @@
         <div class="popup__container">
           <div class="popup__content">
             <button data-close type="button" class="popup__close">
-              <img src="/img/close-button.svg" alt="Close the modal window" />
+              <img src="./img/close-button.svg" alt="Close the modal window" />
             </button>
             <div class="popup__text">
               <h2 class="popup__title" data-language="annoncmentPopup_2">
@@ -362,10 +362,10 @@
               <div class="popup__image">
                 <picture
                   ><source
-                    srcset="/img/announcement/background.webp"
+                    srcset="./img/announcement/background.webp"
                     type="image/webp" />
                   <img
-                    src="/img/announcement/background.jpg"
+                    src="./img/announcement/background.jpg"
                     alt="Траст возобновил свою работу"
                 /></picture>
               </div>
@@ -381,8 +381,8 @@
       </div>
     </div>
 
-    <script src="/js/jquery-3.1.1.js"></script>
-    <script src="/js/app4.js"></script>
+    <script src="./js/jquery-3.1.1.js"></script>
+    <script src="./js/app4.js"></script>
   </body>
 
   <script>
