--- a/history.html
+++ b/history.html
@@ -4,8 +4,8 @@
     <title>History of the BBT</title>
     <meta charset="UTF-8" />
     <meta name="format-detection" content="telephone=no" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="icon" href="/img/favicon.svg" type="image/svg+xml" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" href="./img/favicon.svg" type="image/svg+xml" />
     <!--link rel="shortcut icon" href="favicon.ico"-->
     <!-- <meta name="robots" content="noindex, nofollow"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,12 +21,12 @@
       property="og:description"
       content="We are all well aware that Śrīla Prabhupāda is the Founder-Ācārya of the International Society for Krishna Consciousness, which he founded in New York in 1966, and we are well aware that Śrīla Prabhupāda was the author of numerous books of spiritual literature, such as:"
     />
-    <meta property="og:image" content="/img/meta/preview-history.jpg" />
+    <meta property="og:image" content="./img/meta/preview-history.jpg" />
     <meta property="og:image:width" content="968" />
     <meta property="og:image:height" content="504" />
 
-    <script defer src="/js/counter3.js"></script>
-    <script defer type="module" src="/js/app.js"></script>
+    <script defer src="./js/counter3.js"></script>
+    <script defer type="module" src="./js/app.js"></script>
   </head>
 
   <body>
@@ -37,7 +37,7 @@
             <div class="header__logo logo">
               <img
                 class="logo__icon"
-                src="/img/top-logo.svg"
+                src="./img/top-logo.svg"
                 alt="Bhaktivedanta book trust logotype"
               />
               <span class="logo__description">BHAKTIVEDANTA BOOK TRUST</span>
@@ -107,7 +107,7 @@
             <div class="header__laguage">
               <img
                 class="header__language-icon"
-                src="/img/globus.svg"
+                src="./img/globus.svg"
                 alt=""
                 aria-hidden="true"
               />
@@ -224,8 +224,8 @@
               </div>
               <div class="history__image">
                 <picture
-                  ><source srcset="/img/history/image.webp" type="image/webp" />
-                  <img src="/img/history/image.jpg" alt="BBT HISTORY"
+                  ><source srcset="./img/history/image.webp" type="image/webp" />
+                  <img src="./img/history/image.jpg" alt="BBT HISTORY"
                 /></picture>
               </div>
             </div>
@@ -257,7 +257,7 @@
             <div class="footer__logo">
               <a href="index.html">
                 <img
-                  src="/img/bottom-logo.svg"
+                  src="./img/bottom-logo.svg"
                   alt="Bhaktivedanta Swami Prabhupāda"
                 />
               </a>
